# KnowWhere-MCP-Server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analyze_graph.py  check_last_refine.py  check_statuses.py  debug_db.py  docker-compose.supabase.yml  docker-compose.yml  get_user_id.py  pyproject.toml  railway.toml  requirements.txt  run_mcp.sh  test_mcp_mimic.py  test_meta_extraction.py  verify_db_results.py  verify_hygiene.py  verify_librarian.py
.cursor/rules/: knowwhere-memory.mdc
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
frontend/: lint_output.txt  package-lock.json  package.json  {"status":"healthy","database":"connecte
migrations/: 001_initial_schema.sql  002_enable_rls.sql  003_add_semantic_fields.sql  003_entity_hubs.sql  005_add_draft_status.sql
scripts/: analyze_categories.py  analyze_specific_duplicates.py  apply_semantic_migration.py  check_backfill.py  classify_memories.py  cleanup_invalid_domains.py  consolidate_taxonomy.py  deduplicate_memories.py  detect_duplicates.py  ingest_codebase.py  manual_cleanup.py  mcp_wrapper.sh  migrate_entities.py  normalize_taxonomy_data.py  reset_classification.py  run_migration_005.py  test_llm.py  test_taxonomy_validation.py  verify_and_scan.py  verify_feedback.py  verify_maturation.py  verify_shadow_listener.py  verify_taxonomy.py
src/: __init__.py  config.py  main.py  prompts.py
src/api/: __init__.py  dependencies.py  web.py
src/auth/: __init__.py  api_keys.py  jwt.py  middleware.py  models.py
src/engine/: __init__.py  consolidation.py  document_processor.py  entity_extractor.py  knowledge_graph.py  memory_processor.py  recall_engine.py  shadow_listener.py
src/middleware/: __init__.py  audit.py  rate_limit.py
src/models/: __init__.py  consolidation.py  (+6 more)
tests/: __init__.py  conftest.py  test_integration.py  test_real_database.py
(+86 files in other folders)
